# bayesflow-application-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/examples/: calibrate.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  adapter.py  simulator.py
{{cookiecutter.python_package}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.python_package}}/examples/: calibrate.py  compare_models.py
{{cookiecutter.python_package}}/src/{{cookiecutter.python_package}}/: __init__.py  adapter.py  adapter_comparison.py  adapter_inference.py
{{cookiecutter.python_package}}/src/{{cookiecutter.python_package}}/model_1/: __init__.py  simulator.py
