[project]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
  "bayesflow>=2.0.11",
  "jax>=0.10.0",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.9",
  "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8",
  "pytest-cov",
  "tox>=4",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["{{cookiecutter.package_name}}*"]
exclude = ["artifacts*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "-q -ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
namespace_packages = true

[tool.coverage.run]
source = ["{{cookiecutter.package_name}}"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
